# platform.prebuilts.tools

./: .gitattributes  Android.bp  BUILD  LICENSE  OWNERS  PREUPLOAD.cfg  import-maven-artifacts.sh
clion/: README.md  download-binaries-from-placer.sh  trigger-kokoro-builds.sh
common/: .gitignore
common/aapt/: BUILD.bazel  NOTICE  README.md  aapt2_version.bzl  aapt2_version.properties
common/aapt/jni/: BUILD.bazel
common/aapt/jni/mac64/: libaapt2_jni.dylib  libc++.dylib
common/android-kotlin/: BUILD
common/androidx-integration/: BUILD  README.md
common/archive-patcher/: BUILD  PREBUILT  sbom.spdx.json
common/aspects-agent/: BUILD
common/async-profiler/: PREBUILT
common/clang-format/: git-clang-format
common/cmake/: BUILD
common/dackka/: BUILD.bazel  README.md
common/easymock-tools/: BUILD
common/eclipse-mat/: BUILD  MemoryAnalyzer.ini  PREBUILTS
common/external-src-archives/: README.md
common/google-api-services-compute/: Android.bp
common/google-java-format/: PREBUILT  google-java-format  google-java-format-diff.py
common/jacoco/: BUILD  (+1 more)
common/m2/repository/org/jetbrains/kotlin/jvm/org.jetbrains.kotlin.jvm.gradle.plugin/1.3.61/: BUILD  BUILD.bazel  org.jetbrains.kotlin.jvm.gradle.plugin-1.3.61.pom  org.jetbrains.kotlin.jvm.gradle.plugin-1.3.61.pom.sha1
common/m2/repository/org/jetbrains/kotlin/jvm/org.jetbrains.kotlin.jvm.gradle.plugin/1.3.70/: BUILD  BUILD.bazel  org.jetbrains.kotlin.jvm.gradle.plugin-1.3.70.pom.sha1
common/m2/repository/org/jetbrains/kotlin/jvm/org.jetbrains.kotlin.jvm.gradle.plugin/1.3.72/: BUILD.bazel  org.jetbrains.kotlin.jvm.gradle.plugin-1.3.72.pom  org.jetbrains.kotlin.jvm.gradle.plugin-1.3.72.pom.sha1
jps-build-caches/: BUILD  README.md
(+38757 files in other folders)
