load("//tools/base/bazel:bazel.bzl", "fileset")

exports_files(
    [
        "linux64/libaapt2_jni.so",
        "linux64/libc++.so",
        "mac64/libaapt2_jni.dylib",
        "mac64/libc++.dylib",
        "win32/libaapt2_jni.dll",
        "win64/libaapt2_jni.dll",
        "win64/libwinpthread-1.dll",
    ],
)
