load("//tools/base/bazel:maven.bzl", "maven_java_import", "maven_pom", "maven_aar")

filegroup(
    name = "1.3.61",
)

maven_pom(
    name = "1.3.61_maven",
    classified_files = [],
    classifiers = [],
    source = "org.jetbrains.kotlin.jvm.gradle.plugin-1.3.61.pom",
    visibility = ["//visibility:public"],
)
